salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Billing_Exempt__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Billing_Exempt__c</fullName>
    <label>課金免除</label>
    <description>課金免除(永久無料)</description>
    <inlineHelpText>課金免除(永久無料)</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>