salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Billing_Status__c</fullName>
    <label>契約状態</label>
    <description>契約状態(trial/active/past_due/cancelled等)</description>
    <inlineHelpText>契約状態(trial/active/past_due/cancelled等)</inlineHelpText>
    <type>Text</type>
    <length>30</length>
</CustomField>