salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Cancel_At_Period_End__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Cancel_At_Period_End__c</fullName>
    <label>期間末で解約予定</label>
    <description>期間末で解約予定</description>
    <inlineHelpText>期間末で解約予定</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>