salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Cancel_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Cancel_Requested_At__c</fullName>
    <label>解約申請日時</label>
    <description>解約申請日時</description>
    <inlineHelpText>解約申請日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>