salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Ended_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Ended_At__c</fullName>
    <label>契約終了日時</label>
    <description>契約終了日時</description>
    <inlineHelpText>契約終了日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>