salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Next_Renewal_Date__c</fullName>
    <label>次回更新日</label>
    <description>次回更新日</description>
    <inlineHelpText>次回更新日</inlineHelpText>
    <type>Date</type>
</CustomField>