salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Paid_Started_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Paid_Started_At__c</fullName>
    <label>有料契約の開始日時</label>
    <description>有料契約の開始日時(初回)</description>
    <inlineHelpText>有料契約の開始日時(初回)</inlineHelpText>
    <type>DateTime</type>
</CustomField>