salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Payment_Method_Status__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Payment_Method_Status__c</fullName>
    <label>支払方法の登録状態</label>
    <description>支払方法の登録状態(カード情報は含まない)</description>
    <inlineHelpText>支払方法の登録状態(カード情報は含まない)</inlineHelpText>
    <type>Text</type>
    <length>30</length>
</CustomField>