salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Pilot__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Pilot__c</fullName>
    <label>Pilot</label>
    <description>Pilot(先行利用)契約</description>
    <inlineHelpText>Pilot(先行利用)契約</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>