salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Plan__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Plan__c</fullName>
    <label>プラン</label>
    <description>プラン</description>
    <inlineHelpText>プラン</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>