salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Subscription_Id__c</fullName>
    <label>DENT SHIFTの契約ID</label>
    <description>DENT SHIFTの契約ID(外部ID・一意)</description>
    <inlineHelpText>DENT SHIFTの契約ID(外部ID・一意)</inlineHelpText>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>