salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Trial_Ends_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Trial_Ends_At__c</fullName>
    <label>トライアル終了予定</label>
    <description>トライアル終了予定</description>
    <inlineHelpText>トライアル終了予定</inlineHelpText>
    <type>DateTime</type>
</CustomField>