salesforce/force-app/main/default/objects/Opportunity/fields/DentShift_Trial_Started_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Trial_Started_At__c</fullName>
    <label>トライアル開始日時</label>
    <description>トライアル開始日時</description>
    <inlineHelpText>トライアル開始日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>